--- a/anime/templates/anime/post_list.html
+++ b/anime/templates/anime/post_list.html
@@ -25,7 +25,7 @@
         <input type="text" name="search" placeholder="Search for anime..." value="{{ search_query }}">
         <button type="submit">Search</button>
     </form>
-
+   
     <!-- Anime List -->
     <ul>
         {% for post in posts %}
@@ -33,8 +33,8 @@
                 {{ post.title_english }}
             {% else %}
             {{ post.title_romanji }}
-            {% endif %}
-          <!-- {% if post.trailer %} -->
+            {% endif %} 
+          {% if post.trailer %} 
             <div>
                 <!-- Remove 'youtube:' prefix from trailer and embed video -->
                 <!-- <iframe width="560" height="315"  -->
@@ -43,14 +43,47 @@
                 <!-- allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  -->
                 <!-- allowfullscreen></iframe> -->
             <!-- </div> -->
-        <!-- {% else %} -->
-            <!-- <p>No trailer available.</p> -->
-        <!-- {% endif %}</li> -->
+        {% else %}
+            <p>No trailer available.</p>
+        {% endif %}</li>
         <img src="{{ post.image_url }}" alt="Anime Cover" />
 
         {% empty %}
             <li>No anime found.</li>
         {% endfor %}
     </ul>
+            {% for post in posts %}
+            <li>{% if post.name_full %}
+                {{ post.name_full }}
+            {% else %}
+            {{ post.name_native }}
+            {% endif %} 
+        </li>
+        <img src="{{ post.image }}" alt="Anime Cover" />
+
+        {% empty %}
+            <li>No anime found.</li>
+        {% endfor %}
+    </ul>
+    <ul>
+        {% for post in posts %}
+            <li>{% if post.name_full %}
+                {{ post.name_full }}
+            {% else %}
+            {{ post.name_native }}
+            {% endif %} 
+        </li>
+        <img src="{{ post.image }}" alt="Anime Cover" />
+
+        {% empty %}
+            <li>No anime found.</li>
+        {% endfor %}
+    </ul>
+    <!-- Search Form -->
+
+   
+    <!-- Anime List -->
+ 
+
 </body>
 </html>
