added api for staff search and recommend

--- a/anime/templates/anime/post_list.html
+++ b/anime/templates/anime/post_list.html
@@ -28,45 +28,24 @@
    
     <!-- Anime List -->
     <ul>
+        {% if posts %}
         {% for post in posts %}
-            <li>{% if post.title_english %}
-                {{ post.title_english }}
-            {% else %}
-            {{ post.title_romanji }}
-            {% endif %} 
-          {% if post.trailer %} 
-            <div>
-                <!-- Remove 'youtube:' prefix from trailer and embed video -->
-                <!-- <iframe width="560" height="315"  -->
-                <!-- src="https://www.youtube.com/embed/{{ post.trailer|slice:'8:' }}"  -->
-                <!-- frameborder="0"  -->
-                <!-- allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  -->
-                <!-- allowfullscreen></iframe> -->
-            <!-- </div> -->
-        {% else %}
-            <p>No trailer available.</p>
-        {% endif %}</li>
-        <img src="{{ post.image_url }}" alt="Anime Cover" />
-
-        {% empty %}
-            <li>No anime found.</li>
+            <li>
+                {% if post.title_english %}
+                    {{ post.title_english }}
+                {% else %}
+                    {{ post.title_romanji }}
+                {% endif %}
+            </li>
+            <img src="{{ post.image_url }}" alt="Anime Cover" />
         {% endfor %}
-    </ul>
-            {% for post in posts %}
-            <li>{% if post.name_full %}
-                {{ post.name_full }}
-            {% else %}
-            {{ post.name_native }}
-            {% endif %} 
-        </li>
-        <img src="{{ post.image }}" alt="Anime Cover" />
-
-        {% empty %}
-            <li>No anime found.</li>
-        {% endfor %}
-    </ul>
+    {% else %}
+        <li>No anime found.</li>
+    {% endif %}
+    
+ 
     <ul>
-        {% for post in posts %}
+        {% for post in postss %}
             <li>{% if post.name_full %}
                 {{ post.name_full }}
             {% else %}
@@ -76,13 +55,12 @@
         <img src="{{ post.image }}" alt="Anime Cover" />
 
         {% empty %}
-            <li>No anime found.</li>
+            <li>No Staff found.</li>
         {% endfor %}
     </ul>
     <!-- Search Form -->
 
    
-    <!-- Anime List -->
  
 
 </body>
